--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^3.3.5",
     "express": "^4.13.3",
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.8.1",
-    "grunt-contrib-uglify": "^0.9.2",
-    "jquery": "^2.1.4"
+    "grunt-contrib-uglify": "^0.9.2"
   }
 }
